<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">binkapp</string>
    <string name="ok">OK</string>
    <string name="add_button_description">Add button</string>
    <string name="missing_destination_dialog_title">Missing destination</string>
    <string name="not_implemented_yet_text">Not implemented yet</string>
    <string name="bink_version">Version: \(%1$s), build: \(%2$s)</string>
    <string name="delete_text">Delete</string>
    <string name="barcode_text">Barcode</string>
    <string name="barcode_label">Barcode:</string>
    <string name="pending_card_delete_title">Cannot delete</string>
    <string name="pending_card_delete_message">While your card is pending it cannot be deleted. Please try again later.</string>
    <string name="loyalty_wallet_dialog_title">Are you sure you want to delete this card?</string>
    <string name="loyalty_wallet_dialog_description">Delete card was canceled</string>
    <string name="loyalty_wallet_no_barcode_title">No Barcode</string>
    <string name="loyalty_wallet_no_barcode_message">No barcode or card number to display. Please check the status of this card.</string>
    <string name="yes_text">YES</string>
    <string name="no_text">NO</string>
    <string name="cancel_text_upper">CANCEL</string>
    <string name="cancel_text">Cancel</string>
    <string name="root">root</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="card_number_description">Show this card number in-store just like you would a physical loyalty card.</string>
    <string name="tap_card_to_show_barcode">Tap card to show barcode</string>
    <string name="no_barcode_displayed">This barcode cannot be displayed</string>
    <string name="update_title">App update available</string>
    <string name="update_body">Get the latest version of the Bink app.</string>
    <string name="update_maybe_later">Maybe Later</string>
    <string name="update_skip_version">Skip this version</string>
    <string name="update_start_update">Start update</string>
    <string name="error_title">@string/error</string>
    <string name="error_data_retrieval">Could not retrieve server error. Please try again.</string>
    <string name="error_server_down_title">Error</string>
    <string name="error_server_down_message">There was a problem communicating with the server. Please try again later.</string>
    <string name="error_sign_up_failed">Registration failed.</string>
    <string name="error_magic_link_failed">Magic Link is temporarily unavailable, please try again later.</string>
    <string name="barcode_maximize">Maximise barcode</string>
    <string name="barcode_description">Show this barcode in-store just like you would a physical loyalty card.</string>
    <string name="barcode_description_no_barcode">Share this number in-store just like you would a physical loyalty card.</string>
    <string name="barcode_mock_date">Added 15 Jun 2019 16:39:17</string>
    <string name="barcode_card_number">Card number:</string>
    <string name="membership_number_title">%s number</string>
    <string name="barcode_unavailable">There is no barcode available for the current Membership Card.</string>
    <string name="card_status_pending">Pending</string>
    <string name="card_status_retry">Retry</string>
    <string name="link_status_cannot_link">Cannot link</string>
    <string name="plan_name_card_extra"><![CDATA[info >]]></string>
    <string name="custom_card_barcode_name">Card</string>
    <string name="browse_brands">Browse Brands</string>
    <string name="filter">Filters</string>
    <string name="search">Search</string>
    <string name="browse_brands_no_match_label_text">No matches</string>
    <string name="scan_loyalty_card">Scan loyalty card</string>
    <string name="scan_loyalty_card_subtitle">Quickly add a card you already have</string>
    <string name="add_custom_card_scan_title">Add custom card</string>
    <string name="add_custom_card_subtitle">Can\'t find your card? Add custom cards here</string>
    <string name="add_join_screen_reward_info">Rewards info ></string>
    <string name="add_join_inactive_view_description">You cannot see your live points balance and transaction history
        for this card in Bink.
    </string>
    <string name="add_join_inactive_link_description">You cannot link this card to your payment cards yet.</string>
    <string name="add_join_active_link_description">You can link this card to your bank cards and automatically collect
        points when you pay.
    </string>
    <string name="add_join_link_title">Link</string>
    <string name="add_join__inactive_view_description">You can see your live points balance and transactions history for
        this card in Bink.
    </string>
    <string name="add_join_view_title">View</string>
    <string name="add_join_store_description">You can add this card to Bink and show the onscreen barcode at the till to
        collect points.
    </string>
    <string name="add_join_store_title">Store</string>
    <string name="add_join_add_card">Add my card</string>
    <string name="add_join_get_new_card">Get a new card</string>
    <string name="add_payment_card">Add payment card</string>
    <string name="scan_and_link_your_payment_card">Scan and link your payment card</string>
    <string name="browse_brands_text">Browse brands</string>
    <string name="scan_a_card_you_already_have">Scan a card you already have</string>
    <string name="add_loyalty_card">Add loyalty card</string>
    <string name="find_and_join_loyalty_schemes">Find and join loyalty schemes</string>
    <string name="add_payment_card_button_description">Scan and link your payment card</string>
    <string name="error_scheme_already_exists">Scheme Account already exists in another wallet.</string>
    <string name="loyalty_info"> %1$s info &gt;</string>
    <string name="plan_description">Plan Description</string>
    <string name="button_text_log_in">Log in</string>
    <string name="view_history">View history</string>
    <string name="about_membership">About membership</string>
    <string name="about_membership_title_template">About %s</string>
    <string name="about_membership_plan_name">About %1$s</string>
    <string name="about_membership_plan">About %1$s</string>
    <string name="learn_more">Learn more about how it works</string>
    <string name="chevron">&gt;</string>
    <string name="security_privacy">Security and privacy</string>
    <string name="how_we_protect">How we protect your data</string>
    <string name="delete_card">Delete this card</string>
    <string name="delete_card_plan">Delete %1$s</string>
    <string name="delete_card_ending"> this card</string>
    <string name="remove_card">Remove this card from Bink</string>
    <string name="tap_card">Tap card to show barcode</string>
    <string name="tap_card_to_show_card_number">Tap to show card number</string>
    <string name="security_modal_title">Is my Data Secure?</string>
    <string name="security_modal_body_1">We take security very seriously and keeping your personal details safe is very important to us.\n</string>
    <string name="security_modal_body_2">We are a PCI certified service provider which means that we meet the highest level of security standards set by the payment card industry. This certification requires us to employ a wide range of measures designed to protect the security of your information. We recommend that you secure your app with Touch ID and/or a passcode for an extra layer of security.\n</string>
    <string name="security_modal_body_3">We carefully check all the parties who we share your personal information with. To find out more you can see our Privacy Policy here.</string>
    <string name="hyperlink_text">here</string>
    <string name="security_modal_body">%1$s%2$s</string>
    <string name="delete_card_modal_body">Are you sure you want to delete this card?</string>
    <string name="no_plan_description_available">No plan description available</string>
    <string name="loyalty_card_linked">Linked</string>
    <string name="loyalty_card_unlinked">Not linked</string>
    <string name="loyalty_card_pll_linked">Linked</string>
    <string name="loyalty_card_pll_link_now">Link now</string>
    <string name="loyalty_card_pll_retry">Retry</string>
    <string name="loyalty_card_pll_pending">Pending</string>
    <string name="loyalty_card_delete_error_message">We encountered an error. Please try again later.</string>
    <string name="loyalty_card_details_register">Register</string>
    <string name="loyalty_card_details_header_placeholder_text">%s Membership Card</string>
    <string name="tap_to_enlarge_qr">Tap to enlarge QR code</string>
    <string name="tap_to_enlarge_barcode">Tap to enlarge barcode</string>
    <string name="tap_to_enlarge_aztec">Tap to enlarge Aztec code</string>
    <string name="bonus_card_number">Bonus Card number:</string>
    <string name="points_prefix_or_suffix">%1$s %2$s</string>
    <string name="points_prefix_and_suffix">%1$s%2$s%3$s</string>
    <string name="description_last_checked">Last checked %1$s %2$s ago</string>
    <string name="points_login">Log in</string>
    <string name="points_login_account_exists">Account exists</string>
    <string name="description_see_history">To see history</string>
    <string name="points_login_description">Log in</string>
    <string name="points_history">Points history</string>
    <string name="history_text">History</string>
    <string name="description_not_available">Not available</string>
    <string name="points_retry_login">Retry login</string>
    <string name="description_retry_login">To see history</string>
    <string name="terms_and_conditions_text">I authorise Mastercard, Visa and American Express to monitor activity on my payment card to determine when I have made a qualifying transaction, and for Mastercard, Visa and American Express to share such transaction details with Bink to enable my card-linked offer(s) and target offers that may be of interest to me.</string>
    <string name="terms_and_conditions_title">Terms and conditions</string>
    <string name="accept_button_text">I accept</string>
    <string name="decline_button_text">I decline</string>
    <string name="edit_email_address">Edit Email Address</string>
    <string name="edit_email_description">This will overwrite the current logged\nin email address and reboot the app.</string>
    <string name="add_card_text">Add card</string>
    <string name="sign_up_description">Get a link sent to your inbox so you can register or access your existing account instantly!</string>
    <string name="password_text">Password</string>
    <string name="add_email">Add email</string>
    <string name="add_email_subtitle">Please add your email address below</string>
    <string name="continue_button">Continue</string>
    <string name="email_label">Email</string>
    <string name="log_in_email_text">Log in with email</string>
    <string name="continue_text">Continue</string>
    <string name="email_text">Email</string>
    <string name="payment_card_needed">Payment card needed</string>
    <string name="you_currently_don_t_have_any_linked_payment_cards">You currently don\'t have any linked payment cards.\n\nYou can only earn rewards by shopping with a linked payment card.\n\nPlease add a card so you can start earning rewards.</string>
    <string name="enter_manually">Enter manually</string>
    <string name="add_loyalty_card_permissions_denied_title">Please allow camera access</string>
    <string name="add_loyalty_card_permissions_denied_message">To scan your cards, you’ll need to allow Bink access to your device’s camera.</string>
    <string name="add_loyalty_card_permissions_denied_cta_allow">Allow Access</string>
    <string name="add_loyalty_card_permissions_denied_cta_gallery">Add from Photo Library</string>
</resources>