<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/size_medium">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/add_loyalty_card_permissions_denied_title"
            android:textSize="@dimen/toolbar_title_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:fontFamily="@font/nunito_sans_light"
            android:text="@string/add_loyalty_card_permissions_denied_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/enter_manually"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:fontFamily="@font/nunito_sans_light"
            android:text="@string/enter_manually"
            android:textAllCaps="true"
            android:textColor="@color/blue_accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message" />

        <TextView
            android:id="@+id/allow_access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:fontFamily="@font/nunito_sans_light"
            android:text="@string/add_loyalty_card_permissions_denied_cta_allow"
            android:textAllCaps="true"
            android:textColor="@color/blue_accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_manually" />

        <TextView
            android:id="@+id/from_photo_library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:fontFamily="@font/nunito_sans_light"
            android:text="@string/add_loyalty_card_permissions_denied_cta_gallery"
            android:textAllCaps="true"
            android:textColor="@color/blue_accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/allow_access" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:fontFamily="@font/nunito_sans_light"
            android:text="@string/cancel_text"
            android:textAllCaps="true"
            android:textColor="@color/blue_accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from_photo_library" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
