<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/title"
                style="@style/SubtitleTextView"
                android:layout_marginStart="@dimen/first_keyline"
                tools:text="@string/about_membership"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/description"
                style="@style/DescriptionTextView"
                tools:text="@string/learn_more"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
                android:id="@+id/chevron"
                style="@style/DescriptionTextView"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/first_keyline"
                android:text="@string/chevron"
                app:layout_constraintBottom_toBottomOf="@+id/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>