<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            tools:context=".scenes.settings.SettingsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_email_description"
                android:layout_margin="@dimen/margin_padding_size_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_contraintTop_toTopOf="parent"
                />
        <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_size_small"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:autofillHints="email"
                android:hint="@string/edit_email_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_contraintTop_toBottomOf="@id/message"
                />
        <Button
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_contraintTop_toBottomOf="@id/email"
                />
        <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/okButton"
                app:layout_contraintTop_toBottomOf="@id/email"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>