<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="membershipPlan"
            type="com.bink.wallet.model.response.membership_plan.MembershipPlan" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_padding_size_medium"
            android:layout_marginTop="@dimen/description_margin_top"
            android:layout_marginEnd="@dimen/margin_padding_size_medium"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:text="@string/payment_card_needed"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_title_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/text_lines"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_padding_size_medium"
            android:layout_marginEnd="@dimen/margin_padding_size_medium"
            android:fontFamily="@font/nunito_sans_light"
            android:text="@string/you_currently_don_t_have_any_linked_payment_cards"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_description_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title" />

        <Button
            android:id="@+id/get_card_button"
            style="@style/RoundedGradientButton"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/add_card_text"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>